--- a/index.html
+++ b/index.html
@@ -2,9 +2,132 @@
 <html>
     <head>
         <title>Marieke's Design Challenge</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="style.css" type="text/css" />
+
     </head>
     <body>
-        hhhhhheeeeeelllllooooooooooooooooo world
+        <nav>
+            <div class="nav-wrapper">
+              <a href="#" class="brand-logo">Design Challenge</a>
+              <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li>Marieke's web design philosophy</li>
+              </ul>
+            </div>
+        </nav>
+        <div class="container">
+            <h2>Elements of Good Web Design</h2>
+                <div class="row">
+                    <div class="col s12 border"><p class="largeish-font">The core of any website is, of course, the content, whether it's stories, important information, things for sale... Your website is only as good as the content it contains. But websites are a visual medium, and the way in which you present information is crucial. Great web design should be functional, easy to use, and beautiful.</p></div>
+                </div>
+                <div class="row">
+                    <div class="col s3"><div class="emoji">&#127756;</div><h4>Space</h4><p>Use white space to relax the viewer and focus the eye to important content.</p></div>
+                    <div class="col s3"><div class="emoji">&#9000;</div><h4>Text</h4><p>Use a large, legible font. Use size and weight to differentiate between levels of headers/body. Above all, use text sparingly.</p></div>
+                    <div class="col s3"><div class="emoji">&#128397;</div><h4>Colors</h4><p>Pick a color scheme with 1-4 colors. Use small pops of color to focus attention. Ensure high contrast between text and background-colors.</p></div>
+                    <div class="col s3"><div class="emoji">&#x1F5BC;&#xFE0F;</div><h4>Images</h4><p>A picture is worth a thousand words, particularly when designing websites. Display images in consistent sizes, styles, and locations on the page.</p></div>
+                </div>
+                <div class="row">
+                  
+                </div>
+            <div class="divider"></div>
+            <h3>Case Studies: Good Design</h3>
+            <div class="row">
+                <div class="col s6">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                          <div class="imageCard" id="card1"></div>
+                          <!--<img class="activator" src="NYPL.png">-->
+                        </div>
+                        <div class="card-content">
+                          <span class="card-title activator grey-text text-darken-4">New York Public Library<i class="material-icons right vSmall">Click for more</i></span>
+                          <p><a href="https://www.nypl.org">nypl.org</a></p>
+                        </div>
+                        <div class="card-reveal">
+                          <span class="card-title grey-text text-darken-4">New York Public Library<i class="material-icons right">close</i></span>
+                          <p>The NYPL website is both beautiful and highly functional. It makes excellent use of color to delineate different sections and fantastic use of images. The dominant red and black color scheme is bold, yet its restrained application prevents the page from becomming oppressive. The navbar makes the site easy to navigate. One con is the changing color scheme on other pages of the site, which is slightly jarring.</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col s6">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                          <div class="imageCard" id="card2"></div>
+                          <!--<img class="activator" src="blueapron.png">-->
+                        </div>
+                        <div class="card-content">
+                          <span class="card-title activator grey-text text-darken-4">Blue Apron<i class="material-icons right vSmall">Click for more</i></span>
+                          <p><a href="https://www.blueapron.com">blueapron.com</a></p>
+                        </div>
+                        <div class="card-reveal">
+                          <span class="card-title grey-text text-darken-4">Blue Apron<i class="material-icons right">close</i></span>
+                          <p>This website contrasts cute cartoon graphics with high-quality photographs to create an aesthetic that is both sophisticated and warm. The 3-column meal layout conserves space, appeals visually, and places focus on most important thing: food. One drawback is the video background on the landing page, which is distracting.</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+            <br>
+            <div class="divider"></div>
+            <h3>Case Studies: Bad Design</h3>
+            <div class="row">
+                <div class="col s6">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                          <div class="imageCard" id="card3"></div>
+                          <!--<img class="activator" src="evanschemistrycorner.png">-->
+                        </div>
+                        <div class="card-content">
+                          <span class="card-title activator grey-text text-darken-4">Evan's Regents Chemistry Corner<i class="material-icons right vSmall">Click for more</i></span>
+                          <p><a href="http://www.evanschemistrycorner.com">evanschemistrycorner.com</a></p>
+                        </div>
+                        <div class="card-reveal">
+                          <span class="card-title grey-text text-darken-4">Evan's Regents Chemistry Corner<i class="material-icons right">close</i></span>
+                          <p>Evan's Chemistry Corner is a wonderful website full of fantastic resources for high school chemistry teachers. Unfortunately, the design of the site undercuts its value. The page layout is cramped. The graphics are corny. The navigation links on the side are small and difficult to read due to low contrast between the font color and the unnecessarily-ombr&eacute; background. On pages with more text, the text is squashed together into a narrow vertical column without sufficient spacing between lines, making the page both hard to read and unnecessarily long. This website has some fantastic content, and it's a shame the design doesn't reflect that. </p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col s6">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                          <div class="imageCard" id="card4"></div>
+                          <!--<img class="activator" src="Skedula3.jpeg" height="100%">-->
+                        </div>
+                        <div class="card-content">
+                          <span class="card-title activator grey-text text-darken-4">Skedula<i class="material-icons right vSmall">Click for more</i></span>
+                          <p><a href="https://skedula.com">skedula.com</a></p>
+                        </div>
+                        <div class="card-reveal">
+                          <span class="card-title grey-text text-darken-4">Skedula<i class="material-icons right">close</i></span>
+                          <p>This website takes the cake for terrible design. The colors are inconsistent and the black sidebar is jarring. There are three different navegation bars-- which should you use?? The icons are cramped instead of being distributed evenly across the screen. The font is small and difficult to read. The sheer amount of graphics and information makes it impossible to discern what is important. Fun fact: the styling of the publicly-accessible page is completely unrelated to the main site. The only way to experience the true horror of this monstrosity is to pay for a subscription.</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Marieke's Design Challenge</h5>
+                <p class="grey-text text-lighten-4">Good design without good content is useless. But good content without good design is frustrating, which is often worse.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Resources for Web Design</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="https://materializecss.com/">Materialize</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">CSS Flexbox Guide</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://css-tricks.com/snippets/css/complete-guide-grid/">CSS Grid Guide</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            &copy; 2019 Marieke Thomas
+            <a class="grey-text text-lighten-4 right" href="https://www.upperlinecode.com/">Upperline Code</a>
+            </div>
+          </div>
+        </footer>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 </html>
